修改绝对路径

--- a/Engine/Gmm/osgdb_gmm.vcxproj
+++ b/Engine/Gmm/osgdb_gmm.vcxproj
@@ -105,7 +105,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>D:\Gitee\EVERLASTING\OSG\include;D:\Gitee\EVERLASTING\3RD\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)OSG\include;$(SolutionDir)3RD\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
       <DisableSpecificWarnings>4589;4706;4127;4100</DisableSpecificWarnings>
