--- a/Engine/Gmm/osgdb_gmm.vcxproj
+++ b/Engine/Gmm/osgdb_gmm.vcxproj
@@ -82,7 +82,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)OSG\include;$(SolutionDir)3RD\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>D:\Gitee\EVERLASTING\OSG\include;D:\Gitee\EVERLASTING\3RD\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)OSG\include;$(SolutionDir)3RD\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -90,7 +90,7 @@
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <Link>
-      <AdditionalDependencies>D:\Gitee\EVERLASTING\Lib\Debug\osgAnimationd.lib;wininet.lib;D:\Gitee\EVERLASTING\3RD\lib\libfbxsdk-mdd.lib;opengl32.lib;D:\Gitee\EVERLASTING\Lib\Debug\osgViewerd.lib;D:\Gitee\EVERLASTING\Lib\Debug\osgTextd.lib;D:\Gitee\EVERLASTING\Lib\Debug\osgGAd.lib;D:\Gitee\EVERLASTING\Lib\Debug\osgDBd.lib;D:\Gitee\EVERLASTING\3RD\lib\zlibd.lib;D:\Gitee\EVERLASTING\Lib\Debug\osgUtild.lib;D:\Gitee\EVERLASTING\Lib\Debug\osgd.lib;D:\Gitee\EVERLASTING\Lib\Debug\OpenThreadsd.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)Lib\Debug\osgAnimationd.lib;wininet.lib;$(SolutionDir)3RD\lib\libfbxsdk-mdd.lib;opengl32.lib;$(SolutionDir)Lib\Debug\osgViewerd.lib;$(SolutionDir)Lib\Debug\osgTextd.lib;$(SolutionDir)Lib\Debug\osgGAd.lib;$(SolutionDir)Lib\Debug\osgDBd.lib;$(SolutionDir)3RD\lib\zlibd.lib;$(SolutionDir)Lib\Debug\osgUtild.lib;$(SolutionDir)Lib\Debug\osgd.lib;$(SolutionDir)Lib\Debug\OpenThreadsd.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>%(AdditionalOptions) /machine:x64</AdditionalOptions>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -132,7 +132,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)OSG\include;$(SolutionDir)3RD\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>D:\Gitee\EVERLASTING\OSG\include;D:\Gitee\EVERLASTING\3RD\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)OSG\include;$(SolutionDir)3RD\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -140,7 +140,7 @@
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <Link>
-      <AdditionalDependencies>D:\Gitee\EVERLASTING\Lib\Release\osgAnimation.lib;wininet.lib;D:\Gitee\EVERLASTING\3RD\lib\libfbxsdk-md.lib;opengl32.lib;D:\Gitee\EVERLASTING\Lib\Release\osgViewer.lib;D:\Gitee\EVERLASTING\Lib\Release\osgText.lib;D:\Gitee\EVERLASTING\Lib\Release\osgGA.lib;D:\Gitee\EVERLASTING\Lib\Release\osgDB.lib;D:\Gitee\EVERLASTING\3RD\lib\zlib.lib;D:\Gitee\EVERLASTING\Lib\Release\osgUtil.lib;D:\Gitee\EVERLASTING\Lib\Release\osg.lib;D:\Gitee\EVERLASTING\Lib\Release\OpenThreads.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)Lib\Release\osgAnimation.lib;wininet.lib;$(SolutionDir)3RD\lib\libfbxsdk-md.lib;opengl32.lib;$(SolutionDir)Lib\Release\osgViewer.lib;$(SolutionDir)Lib\Release\osgText.lib;$(SolutionDir)Lib\Release\osgGA.lib;$(SolutionDir)Lib\Release\osgDB.lib;$(SolutionDir)3RD\lib\zlib.lib;$(SolutionDir)Lib\Release\osgUtil.lib;$(SolutionDir)Lib\Release\osg.lib;$(SolutionDir)Lib\Release\OpenThreads.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>%(AdditionalOptions) /machine:x64</AdditionalOptions>
       <GenerateDebugInformation>false</GenerateDebugInformation>
@@ -154,7 +154,7 @@
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CustomBuild Include="D:\Gitee\EVERLASTING\Engine\Gmm\CMakeLists.txt">
+    <CustomBuild Include="$(SolutionDir)Engine\Gmm\CMakeLists.txt">
       <UseUtf8Encoding>Always</UseUtf8Encoding>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Building Custom Rule D:/Gitee/EVERLASTING/Engine/Gmm/CMakeLists.txt</Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">setlocal
@@ -167,7 +167,7 @@ exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(AdditionalInputs)</AdditionalInputs>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">D:\Gitee\EVERLASTING\Engine\Gmm\CMakeFiles\generate.stamp</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(SolutionDir)Engine\Gmm\CMakeFiles\generate.stamp</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</LinkObjects>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Building Custom Rule D:/Gitee/EVERLASTING/Engine/Gmm/CMakeLists.txt</Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">setlocal
@@ -180,67 +180,67 @@ exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(AdditionalInputs)</AdditionalInputs>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">D:\Gitee\EVERLASTING\Engine\Gmm\CMakeFiles\generate.stamp</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(SolutionDir)Engine\Gmm\CMakeFiles\generate.stamp</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</LinkObjects>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Animation\StackedSoftElement.cpp" />
     <ClCompile Include="Animation\UpdateSoftBone.cpp" />
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmRAnimation.cpp" />
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmRCamera.cpp" />
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmRLight.cpp" />
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmRMesh.cpp" />
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmRNode.cpp" />
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\ReaderWriterGMM.cpp" />
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\WriterCompareTriangle.cpp" />
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\WriterNodeVisitor.cpp" />
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmMaterialToOsgStateSet.cpp" />
-    <ResourceCompile Include="D:\Gitee\EVERLASTING\OSG\PlatformSpecifics\Windows\OpenSceneGraphVersionInfo.rc" />
+    <ClCompile Include="gmmRAnimation.cpp" />
+    <ClCompile Include="gmmRCamera.cpp" />
+    <ClCompile Include="gmmRLight.cpp" />
+    <ClCompile Include="gmmRMesh.cpp" />
+    <ClCompile Include="gmmRNode.cpp" />
+    <ClCompile Include="ReaderWriterGMM.cpp" />
+    <ClCompile Include="WriterCompareTriangle.cpp" />
+    <ClCompile Include="WriterNodeVisitor.cpp" />
+    <ClCompile Include="gmmMaterialToOsgStateSet.cpp" />
+    <ResourceCompile Include="$(SolutionDir)OSG\PlatformSpecifics\Windows\OpenSceneGraphVersionInfo.rc" />
     <ClInclude Include="Animation\StackedSoftElement.h" />
     <ClInclude Include="Animation\UpdateSoftBone.h" />
-    <ClInclude Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmMaterialToOsgStateSet.h" />
-    <ClInclude Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmReader.h" />
-    <ClInclude Include="D:\Gitee\EVERLASTING\Engine\Gmm\ReaderWriterGMM.h" />
-    <ClInclude Include="D:\Gitee\EVERLASTING\Engine\Gmm\WriterCompareTriangle.h" />
-    <ClInclude Include="D:\Gitee\EVERLASTING\Engine\Gmm\WriterNodeVisitor.h" />
+    <ClInclude Include="gmmMaterialToOsgStateSet.h" />
+    <ClInclude Include="gmmReader.h" />
+    <ClInclude Include="ReaderWriterGMM.h" />
+    <ClInclude Include="WriterCompareTriangle.h" />
+    <ClInclude Include="WriterNodeVisitor.h" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="D:\Gitee\EVERLASTING\OSG\ZERO_CHECK.vcxproj">
+    <ProjectReference Include="$(SolutionDir)OSG\ZERO_CHECK.vcxproj">
       <Project>{93C5C9B9-6C61-3414-96EC-6F203A8A68C9}</Project>
       <Name>ZERO_CHECK</Name>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </ProjectReference>
-    <ProjectReference Include="D:\Gitee\EVERLASTING\OSG\src\OpenThreads\win32\OpenThreads.vcxproj">
+    <ProjectReference Include="$(SolutionDir)OSG\src\OpenThreads\win32\OpenThreads.vcxproj">
       <Project>{D1065C35-20CE-38DC-8FAE-66BB4251DFEA}</Project>
       <Name>OpenThreads</Name>
     </ProjectReference>
-    <ProjectReference Include="D:\Gitee\EVERLASTING\OSG\src\osg\osg.vcxproj">
+    <ProjectReference Include="$(SolutionDir)OSG\src\osg\osg.vcxproj">
       <Project>{4A6A5E6E-FBE6-355E-91E3-23BF08F5F092}</Project>
       <Name>osg</Name>
     </ProjectReference>
-    <ProjectReference Include="D:\Gitee\EVERLASTING\OSG\src\osgAnimation\osgAnimation.vcxproj">
+    <ProjectReference Include="$(SolutionDir)OSG\src\osgAnimation\osgAnimation.vcxproj">
       <Project>{C8A93E63-98E3-33D4-B561-F7E5513AA3A8}</Project>
       <Name>osgAnimation</Name>
     </ProjectReference>
-    <ProjectReference Include="D:\Gitee\EVERLASTING\OSG\src\osgDB\osgDB.vcxproj">
+    <ProjectReference Include="$(SolutionDir)OSG\src\osgDB\osgDB.vcxproj">
       <Project>{1CAD8450-2D66-3B5E-A3C3-3BF390E19FE1}</Project>
       <Name>osgDB</Name>
     </ProjectReference>
-    <ProjectReference Include="D:\Gitee\EVERLASTING\OSG\src\osgGA\osgGA.vcxproj">
+    <ProjectReference Include="$(SolutionDir)OSG\src\osgGA\osgGA.vcxproj">
       <Project>{260C2085-EA01-3DE2-8F3A-584756799EC7}</Project>
       <Name>osgGA</Name>
     </ProjectReference>
-    <ProjectReference Include="D:\Gitee\EVERLASTING\OSG\src\osgText\osgText.vcxproj">
+    <ProjectReference Include="$(SolutionDir)OSG\src\osgText\osgText.vcxproj">
       <Project>{0E75CACF-787E-359D-9F74-E46BB632E1A1}</Project>
       <Name>osgText</Name>
     </ProjectReference>
-    <ProjectReference Include="D:\Gitee\EVERLASTING\OSG\src\osgUtil\osgUtil.vcxproj">
+    <ProjectReference Include="$(SolutionDir)OSG\src\osgUtil\osgUtil.vcxproj">
       <Project>{DBD005C9-5EA6-3120-B0D5-AF92F73E0C94}</Project>
       <Name>osgUtil</Name>
     </ProjectReference>
-    <ProjectReference Include="D:\Gitee\EVERLASTING\OSG\src\osgViewer\osgViewer.vcxproj">
+    <ProjectReference Include="$(SolutionDir)OSG\src\osgViewer\osgViewer.vcxproj">
       <Project>{24250EFB-6F14-3E27-A01A-464204A62CF2}</Project>
       <Name>osgViewer</Name>
     </ProjectReference>
