--- a/Engine/Gmm/osgdb_gmm.vcxproj.filters
+++ b/Engine/Gmm/osgdb_gmm.vcxproj.filters
@@ -1,70 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmRAnimation.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmRCamera.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmRLight.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmRMesh.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmRNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\ReaderWriterGMM.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\WriterCompareTriangle.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\WriterNodeVisitor.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmMaterialToOsgStateSet.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Animation\StackedSoftElement.cpp">
       <Filter>Animation</Filter>
     </ClCompile>
     <ClCompile Include="Animation\UpdateSoftBone.cpp">
       <Filter>Animation</Filter>
     </ClCompile>
+    <ClCompile Include="gmmRAnimation.cpp" />
+    <ClCompile Include="gmmRCamera.cpp" />
+    <ClCompile Include="gmmRLight.cpp" />
+    <ClCompile Include="gmmRMesh.cpp" />
+    <ClCompile Include="gmmRNode.cpp" />
+    <ClCompile Include="ReaderWriterGMM.cpp" />
+    <ClCompile Include="WriterCompareTriangle.cpp" />
+    <ClCompile Include="WriterNodeVisitor.cpp" />
+    <ClCompile Include="gmmMaterialToOsgStateSet.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmMaterialToOsgStateSet.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\Gitee\EVERLASTING\Engine\Gmm\gmmReader.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\Gitee\EVERLASTING\Engine\Gmm\ReaderWriterGMM.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\Gitee\EVERLASTING\Engine\Gmm\WriterCompareTriangle.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\Gitee\EVERLASTING\Engine\Gmm\WriterNodeVisitor.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Animation\StackedSoftElement.h">
       <Filter>Animation</Filter>
     </ClInclude>
     <ClInclude Include="Animation\UpdateSoftBone.h">
       <Filter>Animation</Filter>
     </ClInclude>
+    <ClInclude Include="gmmMaterialToOsgStateSet.h" />
+    <ClInclude Include="gmmReader.h" />
+    <ClInclude Include="ReaderWriterGMM.h" />
+    <ClInclude Include="WriterCompareTriangle.h" />
+    <ClInclude Include="WriterNodeVisitor.h" />
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="D:\Gitee\EVERLASTING\Engine\Gmm\CMakeLists.txt" />
+    <CustomBuild Include="$(SolutionDir)Engine\Gmm\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="D:\Gitee\EVERLASTING\OSG\PlatformSpecifics\Windows\OpenSceneGraphVersionInfo.rc">
-      <Filter>Source Files</Filter>
-    </ResourceCompile>
+    <ResourceCompile Include="$(SolutionDir)OSG\PlatformSpecifics\Windows\OpenSceneGraphVersionInfo.rc" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
