--- a/Everlasting/Everlasting.vcxproj.filters
+++ b/Everlasting/Everlasting.vcxproj.filters
@@ -113,6 +113,15 @@
     <ClCompile Include="..\Engine\GMAudio.cpp">
       <Filter>GMEngine\Core\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UI\GMSlider.cpp">
+      <Filter>Everlasting\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UI\GMTextScroller.cpp">
+      <Filter>Everlasting\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UI\GMVolumeWidget.cpp">
+      <Filter>Everlasting\UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Engine\Assist\tinystr.h">
@@ -204,9 +213,21 @@
     <QtMoc Include="UI\GMUIManager.h">
       <Filter>Everlasting\UI</Filter>
     </QtMoc>
+    <QtMoc Include="UI\GMSlider.h">
+      <Filter>Everlasting\UI</Filter>
+    </QtMoc>
+    <QtMoc Include="UI\GMTextScroller.h">
+      <Filter>Everlasting\UI</Filter>
+    </QtMoc>
+    <QtMoc Include="UI\GMVolumeWidget.h">
+      <Filter>Everlasting\UI</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="UI\GMMainWindow.ui">
+      <Filter>Everlasting\UI</Filter>
+    </QtUic>
+    <QtUic Include="UI\GMVolumeWidget.ui">
       <Filter>Everlasting\UI</Filter>
     </QtUic>
   </ItemGroup>
