重新梳理了键盘事件的逻辑，避免Engine中调用界面的代码，也修改了原先界面中混乱的循环调用

--- a/Engine/Gmm/osgdb_gmm.vcxproj
+++ b/Engine/Gmm/osgdb_gmm.vcxproj
@@ -146,8 +146,9 @@
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
       <ImportLibrary>$(SolutionDir)Lib/Release/osgPlugins-3.6.5/osgdb_gmm.lib</ImportLibrary>
-      <ProgramDataBaseFile>$(SolutionDir)Bin/Release/osgPlugins-3.6.5/osgdb_gmm.pdb</ProgramDataBaseFile>
-      <SubSystem>Console</SubSystem>
+      <ProgramDataBaseFile>
+      </ProgramDataBaseFile>
+      <SubSystem>Windows</SubSystem>
     </Link>
     <ProjectReference>
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
