--- a/Everlasting/Everlasting.vcxproj
+++ b/Everlasting/Everlasting.vcxproj
@@ -209,6 +209,9 @@
   <ItemGroup>
     <QtRcc Include="Everlasting.qrc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resources\GM_logo.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
