--- a/Everlasting/Everlasting.vcxproj.filters
+++ b/Everlasting/Everlasting.vcxproj.filters
@@ -122,6 +122,9 @@
     <ClCompile Include="UI\GMVolumeWidget.cpp">
       <Filter>Everlasting\UI</Filter>
     </ClCompile>
+    <ClCompile Include="UI\GMPlayKitWidget.cpp">
+      <Filter>Everlasting\UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Engine\Assist\tinystr.h">
@@ -222,12 +225,18 @@
     <QtMoc Include="UI\GMVolumeWidget.h">
       <Filter>Everlasting\UI</Filter>
     </QtMoc>
+    <QtMoc Include="UI\GMPlayKitWidget.h">
+      <Filter>Everlasting\UI</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="UI\GMMainWindow.ui">
       <Filter>Everlasting\UI</Filter>
     </QtUic>
     <QtUic Include="UI\GMVolumeWidget.ui">
+      <Filter>Everlasting\UI</Filter>
+    </QtUic>
+    <QtUic Include="UI\GMPlayKitWidget.ui">
       <Filter>Everlasting\UI</Filter>
     </QtUic>
   </ItemGroup>
