--- a/Everlasting/Everlasting.vcxproj
+++ b/Everlasting/Everlasting.vcxproj
@@ -85,7 +85,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)Lib\$(Configuration)\;$(QTDIR)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>OpenThreadsd.lib;osgd.lib;osgViewerd.lib;osgAnimationd.lib;osgGAd.lib;osgDBd.lib;osgUtild.lib;qtmaind.lib;Qt5Cored.lib;Qt5Guid.lib;Qt5Widgetsd.lib;Qt5OpenGLd.lib;bass_x64.lib;Cipher_d.lib;dwmapi.lib;psapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>OpenThreadsd.lib;osgd.lib;osgViewerd.lib;osgAnimationd.lib;osgGAd.lib;osgDBd.lib;osgUtild.lib;qtmaind.lib;Qt5Cored.lib;Qt5Guid.lib;Qt5Widgetsd.lib;Qt5OpenGLd.lib;bass_x64.lib;Cipher_d.lib;dwmapi.lib;psapi.lib;steam_api64.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -104,7 +104,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)Lib\$(Configuration)\;$(QTDIR)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>OpenThreads.lib;osg.lib;osgAnimation.lib;osgDB.lib;osgFX.lib;osgGA.lib;osgViewer.lib;osgUtil.lib;osgWidget.lib;qtmain.lib;Qt5Core.lib;Qt5Gui.lib;Qt5Widgets.lib;Qt5OpenGL.lib;bass_x64.lib;Cipher.lib;dwmapi.lib;psapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>OpenThreads.lib;osg.lib;osgAnimation.lib;osgDB.lib;osgFX.lib;osgGA.lib;osgViewer.lib;osgUtil.lib;osgWidget.lib;qtmain.lib;Qt5Core.lib;Qt5Gui.lib;Qt5Widgets.lib;Qt5OpenGL.lib;bass_x64.lib;Cipher.lib;dwmapi.lib;psapi.lib;steam_api64.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="Configuration">
@@ -156,6 +156,7 @@
     <ClCompile Include="..\Engine\GMViewWidget.cpp" />
     <ClCompile Include="..\Engine\GMXml.cpp" />
     <ClCompile Include="..\Engine\osgQt\GraphicsWindowQt.cpp" />
+    <ClCompile Include="GMStatsAndAchievements.cpp" />
     <ClCompile Include="GMSystemManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="UI\GMMainWindow.cpp" />
@@ -191,6 +192,7 @@
     <ClInclude Include="..\Engine\GMTerrain.h" />
     <ClInclude Include="..\Engine\GMXml.h" />
     <ClInclude Include="..\Engine\osgQt\GraphicsWindowQt.h" />
+    <ClInclude Include="GMStatsAndAchievements.h" />
     <ClInclude Include="resource.h" />
     <QtMoc Include="UI\GMPlayKitWidget.h" />
     <QtMoc Include="UI\GMVolumeWidget.h" />
