--- a/Everlasting/Everlasting.vcxproj.filters
+++ b/Everlasting/Everlasting.vcxproj.filters
@@ -128,6 +128,9 @@
     <ClCompile Include="..\Engine\GMTerrain.cpp">
       <Filter>GMEngine\Core\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GMStatsAndAchievements.cpp">
+      <Filter>Everlasting</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Engine\Assist\tinystr.h">
@@ -210,6 +213,9 @@
     </ClInclude>
     <ClInclude Include="..\Engine\GMTerrain.h">
       <Filter>GMEngine\Core\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GMStatsAndAchievements.h">
+      <Filter>Everlasting</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
